--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
         </div>
         <img src="./assets/hiking.png" alt="" />
       </a>
+      <a href="https://erkezh.github.io/my_mentor/" target="_blank">
+        <div class="title">
+          <h2>My Mentor – Educational Platform Prototype</h2>
+        </div>
+        <img src="./assets/my-mentor.png" alt="" />
+      </a>
+      <a href="https://erkezh.github.io/love_balloon_shop/" target="_blank">
+        <div class="title">
+          <h2>Love Balloon Shop – Online Store Landing Page</h2>
+        </div>
+        <img src="./assets/loveballoon.png" alt="" />
+      </a>
     </div>
 
     <div class="details" id="details">
