--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
         </div>
         <img src="./assets/loveballoon.png" alt="" />
       </a>
+      <a href="https://erkezh.github.io/cooks-delight/" target="_blank">
+        <div class="title">
+          <h2>The Last Bake – Final Project 2025</h2>
+        </div>
+        <img src="./assets/cooks delight.png" alt="" />
+      </a>
     </div>
 
     <div class="details" id="details">
